# mediaBrowser

./: .gitignore  CMakeLists.txt  README.md  run_cmake_vs.sh
doc/: README.md
ext/cmake/: common.cmake  commonQt.cmake
res/samples/: README.md
src/: main.cpp
src/core/: controller.cpp  controller.hpp  viewInterface.hpp
src/ui/: analysis.cpp  analysis.hpp  fileSystemBrowser.cpp  fileSystemBrowser.hpp  histogram.cpp  histogram.hpp  log.cpp  log.hpp  mainWindow.cpp  mainWindow.hpp  metadataBrowser.cpp  metadataBrowser.hpp  player.cpp  player.hpp
